--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
   "name": "my-react-app",
-  "homepage":"https://kipyegon2000.github.io/amos-portfolio",
+  "homepage": "https://kipyegon2000.github.io/amos-portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
-
-"scripts": {
-  "dev": "vite",
-  "build": "vite build",
-  "preview": "vite preview",
-  "predeploy": "npm run build",
-  "deploy": "gh-pages -d dist"
-},
-
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
+  },
   "dependencies": {
+    "@mapbox/togeojson": "^0.16.2",
+    "leaflet": "^1.9.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0",
+    "shapefile": "^0.6.6",
+    "shpjs": "^6.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
